--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -186,11 +186,11 @@ a {
     border: 1px solid;
     text-align: center;
     border-radius: 20px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .preview img {
-    height: 100%;
+    height: 116px;
     width: 100%;
     object-fit: cover;
 }
