--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -68,6 +68,32 @@
 
 .add-qa-container {
     margin: 10px;
+
+    .content-qa-container {
+        th {
+            text-align: center;
+            background-color: aqua;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        td {
+
+            text-align: center;
+
+            &.btn-container {
+                div {
+                    display: flex;
+                    height: 100px;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+
+            }
+        }
+    }
 }
 
 .add-ans {
