--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -104,3 +104,33 @@
 .list-qa {
     background-color: aliceblue;
 }
+
+.body-container {
+    background-color: #3b0a45;
+    color: #fff;
+    font-family: Arial, sans-serif;
+    padding: 3rem;
+    height: 100vh;
+    width: 100vw;
+}
+
+.question-box {
+    background-color: #1e001f;
+    border: 2px solid #5e005e;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+
+
+
+.answer-option {
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    position: relative;
+    color: #fff;
+    text-align: center;
+}
