--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -133,4 +133,59 @@
     position: relative;
     color: #fff;
     text-align: center;
+
+    .corr {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    .incorr {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
 }
+
+.poiter {
+    cursor: pointer;
+
+    &:hover {
+        opacity: 0.8;
+    }
+}
+
+
+
+
+
+
+//effect appears react
+// .messageout-enter {
+//     position: absolute;
+//     top: 0;
+//     left: calc(13% + 5px);
+//     right: calc(13% + 5px);
+//     opacity: 0.01;
+//     transform: translateY(0%) scale(0.01);
+// }
+
+// /* ending ENTER animation */
+// .messageout-enter-active {
+//     opacity: 1;
+//     transform: translateY(0%) scale(1);
+//     transition: all 1000ms ease-in-out;
+// }
+
+// /* starting EXIT animation */
+// .messageout-exit {
+//     opacity: 1;
+//     transform: scale(1.01);
+// }
+
+// /* ending EXIT animation */
+// .messageout-exit-active {
+//     opacity: 0;
+//     transform: scale(4);
+//     transition: all 1000ms ease-in-out;
+// }
