--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -110,7 +110,7 @@
     color: #fff;
     font-family: Arial, sans-serif;
     padding: 3rem;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 }
 
@@ -121,6 +121,11 @@
     padding: 20px;
     margin-bottom: 20px;
     position: relative;
+
+    &.col-md-6 {
+        color: aquamarine;
+        background-color: rgb(111, 111, 237);
+    }
 }
 
 
