update dashboard history

--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -318,6 +318,12 @@
     cursor: auto !important;
 }
 
+.imgHisLess {
+    height: 100px;
+    width: 100px;
+    object-fit: contain;
+}
+
 //effect appears react
 // .messageout-enter {
 //     position: absolute;
